src/test/ui/issues/50000-59999/issue-50264-inner-deref-trait/option-as_deref_mut.stderr
error[E0599]: no method named `as_deref_mut` found for enum `Option<{integer}>` in the current scope
  --> $DIR/option-as_deref_mut.rs:2:33
   |
LL |     let _result = &mut Some(42).as_deref_mut();
   |                                 ^^^^^^^^^^^^ method not found in `Option<{integer}>`
   |
   = note: the method `as_deref_mut` exists but the following trait bounds were not satisfied:
           `{integer}: DerefMut`
           `<{integer} as Deref>::Target = _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
